refactor: Cleanup OGM classes + add javadoc